--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
+    "mysql2": "^3.14.1",
     "nodemon": "^3.1.9"
   }
 }
