--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "mysql2": "^3.14.1",
+    "node-fetch": "^2.7.0",
     "nodemon": "^3.1.10"
   }
 }
